Add upgrade tasks for opstools services
This patch adds upgrade tasks for sensu-client, fluentd and collectd

Change-Id: I3a8096159664b1934b34f6c79b8afb4a3dc645c8

--- a/puppet/services/logging/fluentd-client.yaml
+++ b/puppet/services/logging/fluentd-client.yaml
@@ -62,3 +62,12 @@ outputs:
               get_attr: [LoggingConfiguration, LoggingSharedKey]
       step_config: |
         include ::tripleo::profile::base::logging::fluentd
+      upgrade_tasks:
+        - name: Check status of fluentd service
+          shell: >
+            /usr/bin/systemctl show fluentd --property ActiveState |
+            grep '\bactive\b'
+          tags: step0,validation
+        - name: Stop fluentd service
+          tags: step2
+          service: name=fluentd state=stopped
