--- a/puppet/services/metrics/collectd.yaml
+++ b/puppet/services/metrics/collectd.yaml
@@ -109,3 +109,12 @@ outputs:
               .flatten().distinct()
       step_config: |
         include ::tripleo::profile::base::metrics::collectd
+      upgrade_tasks:
+        - name: Check status of collectd service
+          shell: >
+            /usr/bin/systemctl show collectd --property ActiveState |
+            grep '\bactive\b'
+          tags: step0,validation
+        - name: Stop collectd service
+          tags: step2
+          service: name=collectd state=stopped
