--- a/puppet/services/monitoring/sensu-client.yaml
+++ b/puppet/services/monitoring/sensu-client.yaml
@@ -62,3 +62,12 @@ outputs:
                     region: {get_param: KeystoneRegion}
       step_config: |
         include ::tripleo::profile::base::monitoring::sensu
+      upgrade_tasks:
+        - name: Check status of sensu-client service
+          shell: >
+            /usr/bin/systemctl show sensu-client --property ActiveState |
+            grep '\bactive\b'
+          tags: step0,validation
+        - name: Stop sensu-client service
+          tags: step2
+          service: name=sensu-client state=stopped
