--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -139,7 +139,7 @@ outputs:
           nova::rabbit_port: {get_param: RabbitClientPort}
           nova::placement::project_name: 'service'
           nova::placement::password: {get_param: NovaPassword}
-          nova::placement::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
+          nova::placement::auth_url: {get_param: [EndpointMap, KeystoneInternal, uri_no_suffix]}
           nova::placement::os_region_name: {get_param: KeystoneRegion}
           nova::placement::os_interface: {get_param: NovaPlacementAPIInterface}
           nova::database_connection:
