--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -167,6 +167,7 @@ outputs:
           nova::purge_config: {get_param: EnableConfigPurge}
           nova::network::neutron::neutron_project_name: 'service'
           nova::network::neutron::neutron_username: 'neutron'
+          nova::network::neutron::neutron_region_name: {get_param: KeystoneRegion}
           nova::network::neutron::dhcp_domain: ''
           nova::network::neutron::neutron_password: {get_param: NeutronPassword}
           nova::network::neutron::neutron_url: {get_param: [EndpointMap, NeutronInternal, uri]}
