nova-placement: support upgrade
Upgrade nova-placement service with Ansible.

Change-Id: I43cac37afbc8b39708389895d9f7350b6bd4bcfd

--- a/puppet/services/nova-placement.yaml
+++ b/puppet/services/nova-placement.yaml
@@ -118,3 +118,7 @@ outputs:
             nova::db::mysql_placement::allowed_hosts:
               - '%'
               - "%{hiera('mysql_bind_host')}"
+      upgrade_tasks:
+        - name: Stop nova_placement service (running under httpd)
+          tags: step2
+          service: name=httpd state=stopped
