Configure the placement API's interface to use the internal endpoint
Due to the keystoneauth library's defaults, it uses the public interface
currently. This is not desirable in most cases (specially when using
network isolation); so we set it to use the internal one.

Change-Id: Ic222a2b734f4d512349fd8556aa2864b13a1eb07
Depends-On: I1c7fd3a32d04e2fafb3820d1c1f221f45c613c83
Closes-Bug: #1663187

--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -115,6 +115,11 @@ parameters:
     description: >
         Cron to move deleted instances to another table - Until complete
     default: false
+  NovaPlacementAPIInterface:
+    type: string
+    description: >
+        Endpoint interface to be used for the placement API.
+    default: 'internal'
 
 
 conditions:
@@ -136,6 +141,7 @@ outputs:
           nova::placement::password: {get_param: NovaPassword}
           nova::placement::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
           nova::placement::os_region_name: {get_param: KeystoneRegion}
+          nova::placement::os_interface: {get_param: NovaPlacementAPIInterface}
           nova::database_connection:
             list_join:
               - ''
