Use Keystone internal endpoint instead of admin for nova-ironic
As per I1213a83ef8693c1cca1d20de974f7949a801d9f1 this moves to
using KeystoneInternal for the nova-ironic template and updates
some deprecated hiera keys.

Change-Id: Ib1103c00ddb7d6d624f4911147197d8355a3a6dd

--- a/puppet/services/nova-ironic.yaml
+++ b/puppet/services/nova-ironic.yaml
@@ -42,10 +42,10 @@ outputs:
           - nova::compute::force_config_drive: true
             nova::compute::reserved_host_memory: '0'
             nova::compute::vnc_enabled: false
-            nova::ironic::common::admin_password: {get_param: IronicPassword}
-            nova::ironic::common::admin_tenant_name: 'service'
-            nova::ironic::common::admin_url: {get_param: [EndpointMap, KeystoneAdmin, uri]}
-            nova::ironic::common::admin_username: 'ironic'
+            nova::ironic::common::password: {get_param: IronicPassword}
+            nova::ironic::common::project_name: 'service'
+            nova::ironic::common::auth_url: {get_param: [EndpointMap, KeystoneInternal, uri]}
+            nova::ironic::common::username: 'ironic'
             nova::ironic::common::api_endpoint: {get_param: [EndpointMap, IronicInternal, uri]}
             nova::network::neutron::dhcp_domain: ''
             nova::scheduler::filter::scheduler_host_manager: 'ironic_host_manager'
