--- a/puppet/services/congress.yaml
+++ b/puppet/services/congress.yaml
@@ -87,3 +87,11 @@ outputs:
 
       step_config: |
         include ::tripleo::profile::base::congress
+
+      upgrade_tasks:
+        - name: "PreUpgrade step0,validation: Check service openstack-congress-server is running"
+          shell: /usr/bin/systemctl show 'openstack-congress-server' --property ActiveState | grep '\bactive\b'
+          tags: step0,validation
+        - name: Stop congress service
+          tags: step2
+          service: name=openstack-congress-server state=stopped
