Add missing TripleO services to ci/multinode
Add:
    - OS::TripleO::Services::TripleoPackages
    - OS::TripleO::Services::TripleoFirewall

to the CI environments, so we can test Firewalling and also TripleO
packages upgrades.

Change-Id: I5d39c7a332a4c376fb4d6ee9463d27f481b6a0d0

--- a/ci/environments/scenario001-multinode.yaml
+++ b/ci/environments/scenario001-multinode.yaml
@@ -66,6 +66,8 @@ parameter_defaults:
     - OS::TripleO::Services::Collectd
     - OS::TripleO::Services::Tacker
     - OS::TripleO::Services::Congress
+    - OS::TripleO::Services::TripleoPackages
+    - OS::TripleO::Services::TripleoFirewall
   ControllerExtraConfig:
     nova::compute::libvirt::services::libvirt_virt_type: qemu
     nova::compute::libvirt::libvirt_virt_type: qemu
