Adds 'trunk' to ODL env service plugins
Trunk ports are now supported in ODL:
I2656ea175174239b0f70d8daa36896c9e9c9cd5a

Change-Id: Ie333f3e97f60f073e651e45c0639beda36bba447
Signed-off-by: Tim Rozet <trozet@redhat.com>

--- a/environments/neutron-opendaylight.yaml
+++ b/environments/neutron-opendaylight.yaml
@@ -10,4 +10,4 @@ resource_registry:
 parameter_defaults:
   NeutronEnableForceMetadata: true
   NeutronMechanismDrivers: 'opendaylight_v2'
-  NeutronServicePlugins: 'odl-router_v2'
+  NeutronServicePlugins: 'odl-router_v2,trunk'
