--- a/environments/major-upgrade-converge.yaml
+++ b/environments/major-upgrade-converge.yaml
@@ -4,3 +4,4 @@ resource_registry:
   OS::TripleO::PostDeploySteps: ../puppet/post.yaml
 parameter_defaults:
   UpgradeLevelNovaCompute: ''
+  UpgradeInitCommonCommand: ''
