Align HCI environment file with list of services from roles_data
Until we get bug #1635409 fixed we'll have to keep the two lists
in sync.

Change-Id: Ifd996bd4c95f901f242696b37e179073be6334d0
Related-Bug: #1635409

--- a/environments/hyperconverged-ceph.yaml
+++ b/environments/hyperconverged-ceph.yaml
@@ -11,6 +11,7 @@ parameter_defaults:
     - OS::TripleO::Services::Timezone
     - OS::TripleO::Services::Ntp
     - OS::TripleO::Services::Snmp
+    - OS::TripleO::Services::Sshd
     - OS::TripleO::Services::NovaCompute
     - OS::TripleO::Services::NovaLibvirt
     - OS::TripleO::Services::Kernel
@@ -25,4 +26,6 @@ parameter_defaults:
     - OS::TripleO::Services::OpenDaylightOvs
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
+    - OS::TripleO::Services::AuditD
+    - OS::TripleO::Services::Collectd
     - OS::TripleO::Services::CephOSD
