--- a/puppet/services/ceph-rgw.yaml
+++ b/puppet/services/ceph-rgw.yaml
@@ -87,4 +87,6 @@ outputs:
           tags: step0,validation
         - name: Stop RGW instance
           tags: step1
-          service: name=ceph-radosgw@{{rgw_id.stdout}} state=stopped
+          service:
+            name: ceph-radosgw@{{rgw_id.stdout}}
+            state: stopped
