--- a/puppet/services/ceph-osd.yaml
+++ b/puppet/services/ceph-osd.yaml
@@ -21,6 +21,24 @@ parameters:
   MonitoringSubscriptionCephOsd:
     default: 'overcloud-ceph-osd'
     type: string
+  CephValidationRetries:
+    type: number
+    default: 40
+    description: Number of retry attempts for Ceph validation
+  CephValidationDelay:
+    type: number
+    default: 30
+    description: Interval (in seconds) in between validation checks
+  IgnoreCephUpgradeWarnings:
+    type: boolean
+    default: false
+    description: If enabled, Ceph upgrade will be forced even though cluster or PGs status is not clean
+
+parameter_groups:
+- label: deprecated
+  description: Do not use deprecated params, they will be removed.
+  parameters:
+  - IgnoreCephUpgradeWarnings
 
 resources:
   CephBase:
@@ -66,17 +84,37 @@ outputs:
         - name: ceph osd set noscrub
           tags: step1
           command: ceph osd set noscrub
-        - name: Stop Ceph OSD
+        - name: Stop CephOSD
           tags: step1
-          service: name=ceph-osd@{{ item }} state=stopped
+          service:
+            name: ceph-osd@{{ item }}
+            state: stopped
           with_items: "{{osd_ids.stdout.strip().split()}}"
-        - name: Update ceph OSD packages
+        - name: Update Ceph packages
           tags: step1
-          yum: name=ceph-osd state=latest
-        - name: Start ceph-osd service
+          yum:
+            name: ceph-osd
+            state: latest
+        - name: Start CephOSD
           tags: step1
-          service: name=ceph-osd@{{ item }} state=started
+          service:
+            name: ceph-osd@{{ item }}
+            state: started
           with_items: "{{osd_ids.stdout.strip().split()}}"
+        # with awk we are meant to check if $2 and $4 are *the same* but it returns 1 when
+        # they are, so the check is inverted to produce an useful exit code
+        - name: Wait for clean pgs...
+          tags: step1,ceph_pgs_clean_validation
+          vars:
+            ignore_warnings: {get_param: IgnoreCephUpgradeWarnings}
+          shell: |
+            ceph pg stat | awk '{exit($2!=$4)}' && ceph health | egrep -sq "HEALTH_OK|HEALTH_WARN"
+          register: ceph_pgs_healthcheck
+          until: ceph_pgs_healthcheck.rc == 0
+          retries: {get_param: CephValidationRetries}
+          delay: {get_param: CephValidationDelay}
+          when:
+            - not ignore_warnings
         - name: ceph osd unset noout
           tags: step1
           command: ceph osd unset noout
