Add zaqar service for composable upgrade
Change-Id: I316e14317e0586e895dcb4e084aa54e7665f6a20
(cherry picked from commit 2cebb99729005a31fbe24a957d2db84397f1952a)

--- a/puppet/services/zaqar.yaml
+++ b/puppet/services/zaqar.yaml
@@ -64,3 +64,18 @@ outputs:
 
       step_config: |
         include ::tripleo::profile::base::zaqar
+      upgrade_tasks:
+        - name: Check if zaqar is deployed
+          command: systemctl is-enabled openstack-zaqar
+          tags: step0,validation
+          ignore_errors: True
+          register: zaqar_enabled
+        - name: "PreUpgrade step0,validation: Check if openstack-zaqar is running"
+          shell: >
+            /usr/bin/systemctl show 'openstack-zaqar' --property ActiveState |
+            grep '\bactive\b'
+          when: zaqar_enabled.rc == 0
+          tags: step0,validation
+        - name: Stop zaqar service
+          tags: step1
+          service: name=openstack-zaqar state=stopped
