Add step0,validation checks for heat services
These are currently commented out because we were waiting for
I7612189be49c9c07f64753c1be4b72aa8524d06d to enable these in the
ci upgrades job.

Change-Id: I07bc0c2af0b227416470e23ad42f3a9aae430271

--- a/puppet/services/heat-api.yaml
+++ b/puppet/services/heat-api.yaml
@@ -86,7 +86,7 @@ outputs:
               heat::keystone::auth::region: {get_param: KeystoneRegion}
       upgrade_tasks:
         - name: "PreUpgrade step0,validation: Check service openstack-heat-api is running"
-          shell: echo o/ #TODO uncomment when /#/c/423302/ : /usr/bin/systemctl show 'openstack-heat-api' --property ActiveState | grep '\bactive\b'
+          shell: /usr/bin/systemctl show 'openstack-heat-api' --property ActiveState | grep '\bactive\b'
           tags: step0,validation
         - name: Stop heat_api service
           tags: step2
