--- a/puppet/services/heat-api-cfn.yaml
+++ b/puppet/services/heat-api-cfn.yaml
@@ -86,7 +86,7 @@ outputs:
               heat::keystone::auth_cfn::region: {get_param: KeystoneRegion}
       upgrade_tasks:
         - name: "PreUpgrade step0,validation: Check service openstack-heat-api-cfn is running"
-          shell: echo o/ #TODO uncomment when /#/c/423302/ : /usr/bin/systemctl show 'openstack-heat-api-cfn' --property ActiveState | grep '\bactive\b'
+          shell: /usr/bin/systemctl show 'openstack-heat-api-cfn' --property ActiveState | grep '\bactive\b'
           tags: step0,validation
         - name: Stop heat_api_cfn service
           tags: step2
