--- a/puppet/services/heat-api-cloudwatch.yaml
+++ b/puppet/services/heat-api-cloudwatch.yaml
@@ -68,7 +68,7 @@ outputs:
         include ::tripleo::profile::base::heat::api_cloudwatch
       upgrade_tasks:
         - name: "PreUpgrade step0,validation: Check service openstack-heat-api-cloudwatch is running"
-          shell: echo o/ #TODO uncomment when /#/c/423302/ : /usr/bin/systemctl show 'openstack-heat-api-cloudwatch' --property ActiveState | grep '\bactive\b'
+          shell: /usr/bin/systemctl show 'openstack-heat-api-cloudwatch' --property ActiveState | grep '\bactive\b'
           tags: step0,validation
         - name: Stop heat_api_cloudwatch service
           tags: step2
