--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -156,7 +156,7 @@
     - OS::TripleO::Services::AuditD
     - OS::TripleO::Services::Collectd
     - OS::TripleO::Services::Vpp
-
+    - OS::TripleO::Services::MySQLClient
 
 - name: BlockStorage
   ServicesDefault:
@@ -173,6 +173,7 @@
     - OS::TripleO::Services::FluentdClient
     - OS::TripleO::Services::AuditD
     - OS::TripleO::Services::Collectd
+    - OS::TripleO::Services::MySQLClient
 
 - name: ObjectStorage
   disable_upgrade_deployment: True
@@ -191,6 +192,7 @@
     - OS::TripleO::Services::FluentdClient
     - OS::TripleO::Services::AuditD
     - OS::TripleO::Services::Collectd
+    - OS::TripleO::Services::MySQLClient
 
 - name: CephStorage
   ServicesDefault:
@@ -207,3 +209,4 @@
     - OS::TripleO::Services::FluentdClient
     - OS::TripleO::Services::AuditD
     - OS::TripleO::Services::Collectd
+    - OS::TripleO::Services::MySQLClient
