--- a/docker/post.j2.yaml
+++ b/docker/post.j2.yaml
@@ -68,6 +68,7 @@ resources:
         - name: CONFIG
         - name: NET_HOST
         - name: NO_ARCHIVE
+        - name: STEP
 
   {{primary_role_name}}DockerPuppetTasksDeployment{{step}}:
     type: OS::Heat::SoftwareDeployment
@@ -85,6 +86,7 @@ resources:
         CONFIG: /var/lib/docker-puppet/docker-puppet-tasks{{step}}.json
         NET_HOST: 'true'
         NO_ARCHIVE: 'true'
+        STEP: {{step}}
 
 {% endfor %}
 # END primary_role_name docker-puppet-tasks
