Containers: workaround for neutron DB sync
Neutron DB sync didn't have permission to read the config files, we now
run neutron-db-manage as root until we can find a more permanent
solution.

Change-Id: I502a8514adc523c7cac1da059be10480eef71cb9
Closes-Bug: #1667300

--- a/docker/services/neutron-api.yaml
+++ b/docker/services/neutron-api.yaml
@@ -81,6 +81,9 @@ outputs:
             net: host
             privileged: false
             detach: false
+            # FIXME: we should make config file permissions right
+            # and run as neutron user
+            user: root
             volumes:
               - /var/lib/config-data/neutron/etc/neutron:/etc/neutron:ro
               - /var/lib/config-data/neutron/usr/share/neutron:/usr/share/neutron:ro
