Make heat max_json_body_size configurable
We need to bump this a bit for the overcloud containers
jobs. This patch makes it configurable and increases the
size for the undercloud.

Related-bug: #1667697

Change-Id: I79319f051747b381f5fa36f8a7fc7f31020bc245

--- a/environments/undercloud.yaml
+++ b/environments/undercloud.yaml
@@ -16,3 +16,4 @@ parameter_defaults:
   NeutronDhcpAgentsPerNetwork: 2
   HeatConvergenceEngine: false
   HeatMaxResourcesPerStack: -1
+  HeatMaxJsonBodySize: 2097152
