--- a/puppet/services/heat-base.yaml
+++ b/puppet/services/heat-base.yaml
@@ -99,6 +99,10 @@ parameters:
     description: >
         Cron to purge db entries marked as deleted and older than $age - Log destination
     default: '/dev/null'
+  HeatMaxJsonBodySize:
+    default: 1048576
+    description: Maximum raw byte size of the Heat API JSON request body.
+    type: number
 
 outputs:
   role_data:
@@ -142,6 +146,7 @@ outputs:
         heat::cron::purge_deleted::age: {get_param: HeatCronPurgeDeletedAge}
         heat::cron::purge_deleted::age_type: {get_param: HeatCronPurgeDeletedAgeType}
         heat::cron::purge_deleted::destination: {get_param: HeatCronPurgeDeletedDestination}
+        heat::max_json_body_size: {get_param: HeatMaxJsonBodySize}
       service_config_settings:
         keystone:
           tripleo::profile::base::keystone::heat_admin_domain: 'heat_stack'
