Enable docker for all roles
A recent patch enabled a few containerized services on the Controller
node. We need to enable docker for all the roles.

Change-Id: I99fc0c2d29db3514a439b717d14367ad2252e450

--- a/environments/docker.yaml
+++ b/environments/docker.yaml
@@ -1,5 +1,5 @@
 resource_registry:
-  OS::TripleO::Compute::NodeUserData: ../docker/firstboot/setup_docker_host.yaml
+  OS::TripleO::NodeUserData: ../docker/firstboot/setup_docker_host.yaml
 
   #NOTE (dprince) add roles to be docker enabled as we support them
   OS::TripleO::Services::NovaLibvirt: ../docker/services/nova-libvirt.yaml
