--- a/puppet/services/panko-api.yaml
+++ b/puppet/services/panko-api.yaml
@@ -84,3 +84,9 @@ outputs:
         include tripleo::profile::base::panko::api
       metadata_settings:
         get_attr: [ApacheServiceBase, role_data, metadata_settings]
+      upgrade_tasks:
+        # The panko API isn't installed in newton images, so install
+        # it on upgrade
+        - name: Install openstack-panko-api packages on upgrade
+          tags: step3
+          yum: name=openstack-panko-api state=latest
