--- a/environments/major-upgrade-composable-steps.yaml
+++ b/environments/major-upgrade-composable-steps.yaml
@@ -7,9 +7,9 @@ parameter_defaults:
     # Newton to Ocata, we need to remove old hiera hook data and
     # install ansible heat agents and ansible-pacemaker
     set -eu
+    yum install -y openstack-heat-agents
     yum install -y python-heat-agent-*
     yum install -y ansible-pacemaker
     rm -f /usr/libexec/os-apply-config/templates/etc/puppet/hiera.yaml
     rm -f /usr/libexec/os-refresh-config/configure.d/40-hiera-datafiles
     rm -f /etc/puppet/hieradata/*.yaml
-
