Add etcd composable upgrade steps
Adding etcd upgrade tasks

Change-Id: Ie891a1a03585b3aec1ed30c176b5fb6b67d7e4b7

--- a/puppet/services/etcd.yaml
+++ b/puppet/services/etcd.yaml
@@ -56,3 +56,18 @@ outputs:
               - 2380
       step_config: |
         include ::tripleo::profile::base::etcd
+      upgrade_tasks:
+        - name: Check if etcd is deployed
+          command: systemctl is-enabled etcd
+          tags: step0,validation
+          ignore_errors: True
+          register: etcd_enabled
+        - name: "PreUpgrade step0,validation: Check if etcd is running"
+          shell: >
+            /usr/bin/systemctl show 'etcd' --property ActiveState |
+            grep '\bactive\b'
+          when: etcd_enabled.rc == 0
+          tags: step0,validation
+        - name: Stop etcd service
+          tags: step2
+          service: name=etcd state=stopped
