Add auditd upgrate steps
Add base upgrade steps for auditd

Change-Id: Iaa56eb40ed80d20744cf8bab18504d700466d26e
(cherry picked from commit 5838d6f765a1ca9535b5d57c1299439040a5def2)

--- a/puppet/services/auditd.yaml
+++ b/puppet/services/auditd.yaml
@@ -32,3 +32,18 @@ outputs:
         auditd::rules: {get_param: AuditdRules}
       step_config: |
         include ::tripleo::profile::base::auditd
+      upgrade_tasks:
+        - name: Check if auditd is deployed
+          command: systemctl is-enabled auditd
+          tags: step0,validation
+          ignore_errors: True
+          register: auditd_enabled
+        - name: "PreUpgrade step0,validation: Check if auditd is running"
+          shell: >
+            /usr/bin/systemctl show 'auditd' --property ActiveState |
+            grep '\bactive\b'
+          when: auditd_enabled.rc == 0
+          tags: step0,validation
+        - name: Stop auditd service
+          tags: step2
+          service: name=auditd state=stopped
