--- a/environments/docker.yaml
+++ b/environments/docker.yaml
@@ -24,6 +24,7 @@ resource_registry:
   OS::TripleO::Services::NeutronCorePlugin: ../docker/services/neutron-plugin-ml2.yaml
   OS::TripleO::Services::NeutronOvsAgent: ../docker/services/neutron-ovs-agent.yaml
   OS::TripleO::Services::NeutronDhcpAgent: ../docker/services/neutron-dhcp.yaml
+  OS::TripleO::Services::NeutronL3Agent: ../docker/services/neutron-l3.yaml
   OS::TripleO::Services::MySQL: ../docker/services/database/mysql.yaml
   OS::TripleO::Services::MistralApi: ../docker/services/mistral-api.yaml
   OS::TripleO::Services::MistralEngine: ../docker/services/mistral-engine.yaml
