Adding keystone parameters for Congress
Change-Id: Ic50aee9e635f62f06fa757fa3d88d9d8c5b28fcb

--- a/puppet/services/congress.yaml
+++ b/puppet/services/congress.yaml
@@ -65,9 +65,6 @@ outputs:
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/congress'
               - '?read_default_file=/etc/my.cnf.d/tripleo.cnf&read_default_group=tripleo'
-        congress::keystone::auth::tenant: 'service'
-        congress::keystone::auth::password: {get_param: CongressPassword}
-        congress::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
         congress::debug: {get_param: Debug}
         congress::rpc_backend: rabbit
         congress::rabbit_userid: {get_param: RabbitUserName}
@@ -75,6 +72,10 @@ outputs:
         congress::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         congress::rabbit_port: {get_param: RabbitClientPort}
         congress::server::bind_host: {get_param: [ServiceNetMap, CongressApiNetwork]}
+
+        congress::keystone::authtoken::project_name: 'service'
+        congress::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
+        congress::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
 
         congress::db::mysql::password: {get_param: CongressPassword}
         congress::db::mysql::user: congress
@@ -84,6 +85,13 @@ outputs:
           - '%'
           - {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
 
+      service_config_settings:
+        keystone:
+          congress::keystone::auth::tenant: 'service'
+          congress::keystone::auth::password: {get_param: CongressPassword}
+          congress::keystone::auth::public_url: {get_param: [EndpointMap, CongressPublic, uri]}
+          congress::keystone::auth::internal_url: {get_param: [EndpointMap, CongressInternal, uri]}
+          congress::keystone::auth::admin_url: {get_param: [EndpointMap, CongressAdmin, uri]}
 
       step_config: |
         include ::tripleo::profile::base::congress
