Adding keystone parameters for Tacker
Change-Id: I256d2fcb6353d029750113c1fec59a89c82583ca
(cherry picked from commit a9c64bd39d28cc073a7f2d19a17466d29be6cc0f)

--- a/puppet/services/tacker.yaml
+++ b/puppet/services/tacker.yaml
@@ -66,9 +66,6 @@ outputs:
               - '/tacker'
               - '?read_default_file=/etc/my.cnf.d/tripleo.cnf&read_default_group=tripleo'
 
-        tacker::keystone::auth::tenant: 'service'
-        tacker::keystone::auth::password: {get_param: TackerPassword}
-        tacker::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
         tacker::debug: {get_param: Debug}
         tacker::rpc_backend: rabbit
         tacker::rabbit_userid: {get_param: RabbitUserName}
@@ -76,6 +73,10 @@ outputs:
         tacker::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         tacker::rabbit_port: {get_param: RabbitClientPort}
         tacker::server::bind_host: {get_param: [ServiceNetMap, TackerApiNetwork]}
+
+        tacker::keystone::authtoken::project_name: 'service'
+        tacker::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
+        tacker::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
 
         tacker::db::mysql::password: {get_param: TackerPassword}
         tacker::db::mysql::user: tacker
@@ -85,6 +86,13 @@ outputs:
           - '%'
           - {get_param: [EndpointMap, MysqlInternal, host_nobrackets]}
 
+      service_config_settings:
+        keystone:
+          tacker::keystone::auth::tenant: 'service'
+          tacker::keystone::auth::password: {get_param: TackerPassword}
+          tacker::keystone::auth::public_url: {get_param: [EndpointMap, TackerPublic, uri]}
+          tacker::keystone::auth::internal_url: {get_param: [EndpointMap, TackerInternal, uri]}
+          tacker::keystone::auth::admin_url: {get_param: [EndpointMap, TackerAdmin, uri]}
 
       step_config: |
         include ::tripleo::profile::base::tacker
